# pmem_allocator

./: .gitignore  CMakeLists.txt  README.md
doc/: pmem_allocator.md
include/: pmem_allocator.hpp
src/: bench.cpp  free_list.cpp  free_list.hpp  pmem_allocator.cpp  pmem_allocator.hpp  pmem_allocator_impl.cpp  pmem_allocator_impl.hpp  space_entry.hpp  spin_mutex.hpp  test.cpp  thread_manager.cpp  thread_manager.hpp  utils.hpp
test/: test.cpp
